--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 quarkus.github-app.debug.payload-directory=payloads
-quarkus.log.level=DEBUG
-quarkus.log.category."io.quarkiverse"=DEBUG
+#quarkus.log.level=DEBUG
+quarkus.log.category."io.quarkiverse".level=DEBUG
 
